2005-04-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR 855
	* elf.c (setup_group): Properly handle zero group count.

2005-04-17  Mark Kettenis  <kettenis@gnu.org>

	* som.c (hppa_som_reloc, som_mkobject, som_is_space)
	(som_is_subspace, compare_subspaces, som_compute_checksum)
	(som_build_and_write_symbol_table, som_slurp_symbol_table): New
	protoypes.
	(hppa_som_reloc, compare_syms, compare_subspaces)
	(som_print_symbol, som_get_section_contents)
	(som_set_section_contents): Remove space after 'void *'.
	(som_bfd_print_private_bfd_data): Use %lx to print longs.
	(som_bfd_merge_private_bfd_data)
	(som_bfd_copy_private_header_data, som_bfd_set_private_flags): New
	defines.

2004-04-15  Julian Brown  <julian@codesourcery.com>

	* bfd-in.h (bfd_elf32_arm_set_target_relocs): Update prototype.
	* bfd-in2.h: Regenerate.
	* elf32-arm.c (elf32_arm_link_hash_table): New field, 'use_blx'.
	(elf32_arm_link_hash_table_create): Initialise fix_v4bx, use_blx.
	(bfd_elf32_arm_set_target_relocs): Handle use_blx.
	(elf32_arm_final_link_relocate): Use Thumb BLX for R_ARM_THM_PC22
	relocations if requested to.
	(allocate_dynrelocs): Don't count size of omitted Thumb stubs based on
	use_blx rather than symbian_p.
	(elf32_arm_finish_dynamic_symbol): Don't output Thumb PLT stubs if
	use_blx is in effect.
	(elf32_arm_symbian_link_hash_table_create): Enable use_blx by default
	for SymbianOS.

2005-04-15  Nick Clifton  <nickc@redhat.com>

	* coffgen.c (coff_print_symbol): Use fprintf_vma to print vma
	values.

2005-04-15  Alan Modra  <amodra@bigpond.net.au>

	PR ld/815
	* elflink.c (elf_smash_syms): Clear undef.next if it's not being
	used as a list pointer.

2005-04-14  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (NO_WERROR): Define.
	* warning.m4: New file
	* acinclude.m4: Include warning.m4.
	* configure.in: Invoke AM_BINUTILS_WARNINGS.
	* Makefile.in: Regenerate.
	* configure: Regenerate.

2005-04-14  Alan Modra  <amodra@bigpond.net.au>
